--- a/partials/menu.html
+++ b/partials/menu.html
@@ -1,6 +1,7 @@
 <section class="menu">
-    <h2>{{MES_ANO}}</h2>
-    <h2>Seleccione su Comité</h2>
+    <h2>{{MES_ANO}}
+    <br>
+    Seleccione su Comité</h2>
 
     <button class="btn" data-comite="JuntaLocal">Junta Local</button>
     <button class="btn" data-comite="EscuelaDominical">Escuela Dominical</button>
