--- a/partials/seleccionar-informe.html
+++ b/partials/seleccionar-informe.html
@@ -1,6 +1,7 @@
 <section class="menu-informes">
-    <h2>INFORMES REGISTRADOS</h2>
-    <h2>Seleccione el comité a consultar</h2>
+    <h2>INFORMES REGISTRADOS
+    <br>
+    Seleccione el comité a consultar</h2>
 
     <button class="btn btn-informe" data-informe="JuntaLocal">Junta Local</button>
     <button class="btn btn-informe" data-informe="EscuelaDominical">Escuela Dominical</button>
