--- a/partials/inicio.html
+++ b/partials/inicio.html
@@ -1,5 +1,5 @@
 <section class="inicio">
-    <h2>¡Bienvenido!<br>Seleccione una opción</h2>
+    <h2>¡Bienvenido!<br><br>Seleccione una opción</h2>
 
     <button class="inicio-opcion" id="btnRegistrarInforme">
         <i class="fa-solid fa-file-circle-plus"></i>
